--- a/.env.example
+++ b/.env.example
@@ -25,7 +25,7 @@ DB_PASSWORD2=modulo2005
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=redis
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 
